--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,200;1,400;1,600;1,700&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <script src="js/behavior.js"></script>
 </head>
 
 <body>
+
     <header class="navigation">
-        <div class="center">
-            <a href="#">Work</a>
+        <div id="headtop" class="center">
+            <a href="#work">Work</a>
             <a href="#">About</a>
-            <a href="#">Resume</a>
+            <a href="resume.html">Resume</a>
         </div>
     </header>
 
@@ -24,6 +27,7 @@
         <div class="ParentHero">
             <div class="childHero1">
                 <h1>Hi</h1>
+                
                 <h2>I'm Ivette.</h2>
                 <h3>I enjoy creating user-centered, aesthetically pleasing, and imaginative solutions to complex
                     problems. </h3>
@@ -40,15 +44,16 @@
             <div class="childHero2">
                 <center>
                     <div class="myHeroImage">
-                        <img src="images/tiger.png" alt="picture of ivette with lantern in the shape of a tiger">
+                        <img id='iv' src="images/tiger.png" alt="picture of ivette with lantern in the shape of a tiger">
                     </div>
                 </center>
             </div>
         </div>
     </section>
 
-    <section class="myWork">
-        <div class="workContainer">
+    <section  class="myWork">
+
+        <div id="work" class="workContainer">
             <div class="workCard">
                 <div class="workCardtext">
                     <p class="header5">Porter</p>
@@ -90,7 +95,7 @@
 
 
             <div class="homeIcon">
-                <a href="#" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png">
+                <a href="#headtop" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png">
                 </a>
             </div>
 
