--- a/resume.html
+++ b/resume.html
@@ -12,11 +12,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,200;1,400;1,600;1,700&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script src="js/behavior.js"></script>
 </head>
 <body>
     <header class="navigation">
-        <div class="center">
-            <a href="#">Work</a>
+        <div id="headtop" class="center">
+            <a href="index.html#work">Work</a>
             <a href="#">About</a>
             <a href="#">Resume</a>
         </div>
@@ -43,7 +46,7 @@
 
 
             <div class="homeIcon">
-                <a href="#" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png" width="50"
+                <a href="index.html" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png" width="50"
                         height="50">
                 </a>
             </div>
