--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a href="#" class="LI">
                     <img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png">
                 </a>
-                <a href="#" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png">
+                <a href="mailto:ivette.torres@u.northwestern.edu" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png">
                 </a>
             </div>
 
