--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="navigation">
         <div id="headtop" class="center">
             <a href="#work">Work</a>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="resume.html">Resume</a>
         </div>
     </header>
