--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <header class="navigation">
         <div id="headtop" class="center">
             <a href="index.html#work">Work</a>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="#">Resume</a>
         </div>
     </header>
