--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 
             <div class="homeIcon">
-                <a href="#headtop" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png">
+                <a href="index.html" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png">
                 </a>
             </div>
 
