--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     problems. </h3>
                 <h4>Let’s Connect!</h4>
                 <div class="bodyIcons">
-                    <a href="#" class="LI"><img border="0" alt="Orange LinkedIn Icon" src="images/OrangeLinkedIn.png"
+                    <a href="https://linkedin.com/in/ivettetorres9" class="LI"><img border="0" alt="Orange LinkedIn Icon" src="images/OrangeLinkedIn.png"
                             width="50" height="50">
                     </a>
-                    <a href="#" class="Em"><img border="0" alt="Orange email icon" src="images/OrangeEmail.png"
+                    <a href="mailto:ivette.torres@u.northwestern.edu" class="Em"><img border="0" alt="Orange email icon" src="images/OrangeEmail.png"
                             width="50" height="50">
                     </a>
                 </div>
@@ -86,7 +86,7 @@
         <div class="footer">
 
             <div class="icons">
-                <a href="#" class="LI">
+                <a href="https://linkedin.com/in/ivettetorres9" class="LI">
                     <img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png">
                 </a>
                 <a href="mailto:ivette.torres@u.northwestern.edu" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png">
