--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
         <div class="footer">
 
             <div class="icons">
-                <a href="#" class="LI"><img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png" width="50"
+                <a href="www.linkedin.com/in/ivettetorres9" class="LI"><img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png" width="50"
                         height="50">
                 </a>
                 <a href="#" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png" width="50"
