--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="js/behavior.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WREWX6M2J4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WREWX6M2J4');
+</script>
+
 </head>
 <body>
     <header class="navigation">
@@ -30,6 +41,7 @@
     </section>
     <section class="grid">
         <button class="hoverMe">Download Resume</button>
+        
       </section>
 
     <footer>
