--- a/about.html
+++ b/about.html
@@ -22,6 +22,18 @@
   gtag('config', 'G-WREWX6M2J4');
 </script>
 
+<!-- Hotjar Tracking Code for https://ivette-torres.github.io/ux_ui_hw_19/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3085058,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 </head>
 
 <body>
