--- a/index.html
+++ b/index.html
@@ -106,21 +106,22 @@
             </div>
     </section>
 
-
     <footer>
         <div class="footer">
 
             <div class="icons">
-                <a href="https://linkedin.com/in/ivettetorres9" class="LI">
-                    <img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png">
+                <a href="www.linkedin.com/in/ivettetorres9" class="LI"><img border="0" alt="LinkedIn Icon" src="images/linkedinIcon.png" width="50"
+                        height="50">
                 </a>
-                <a href="mailto:ivette.torres@u.northwestern.edu" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png">
+                <a href="#" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png" width="50"
+                        height="50">
                 </a>
             </div>
 
 
             <div class="homeIcon">
-                <a href="#headtop" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png">
+                <a href="index.html" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png" width="50"
+                        height="50">
                 </a>
             </div>
 
@@ -130,7 +131,6 @@
 
         </div>
     </footer>
-
 
 </body>
 
