--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
         <h1>Resume</h1>  
     </section>
     <section class="grid">
-        <button class="hoverMe">Download Resume</button>
+        <a  href="./documents/PortfolioUXUI_Resume_Torres.pdf" download="TorresResume" class="hoverMe">Download Resume</a>
         
       </section>
 
