--- a/porter.html
+++ b/porter.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/porter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,200;1,400;1,600;1,700&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
-   
+
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -24,11 +24,106 @@
     </header>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
+
+        <img class="jumboPic" src="images/dogOnsofa.png" alt="picture of a dog on a sofa">
     </div>
+
+   
+
+    <h2>Overview</h2>
+   
+    <p><strong>THE PROBLEM:</strong> While researching common painpoints experieinced by people while traveling we came across the common issue of
+    users needing to organize their homelife before travel. Travelers are faced with the prospect of leaving their
+    pets and plants behind at home while they are out of town. </p>
+
+    <p>
+        <strong>THE SOLUTION:</strong>
+        This app aims to decrease the anxiety that travelers face when needing to leave behind their pets and plants
+        while they travel by connecting users to an online marketplace for pet and plant care.
+    </p>
+
+    <h2>Research</h2>
+    <p>
+        When first approaching this problem, I realized I had to have a better understanding of the users and
+        stakeholders.
+        I conducted five interviews to get detailed notes and experiences that can provide me with more insight on how
+        my app can help potential users.
+        After careful stakeholder exploration and interviews, I created a user persona to think about as I went into the
+        brainstorming phase of the project.
+    </p>
+
+    <div class="centerImage">
+        <img src="images/PorterResearch.png" alt="User Persona of Maria" width="1200" height="800">
+    </div>
+
+    <h3>
+        I wrote down the most important quotes from my user interviews and structured them down in synthesis using
+        Figma. When I was done I came up with themes & patterns for my product and card sorted the notes from the
+        synthesis, focusing on travel painpoints.
+    </h3>
+    <img src="images/AffinityMap.png" alt="sticky notes of data synthesis" width="1200" height="400">
+
+    <h3>
+        Competitor analysis:
+        I took a moment to survey the playing field. Who are our competitors and what do they do well, and not so well?
+        I researched features that direct and indirect competitors offer and analyzed the findings to discover what I
+        could improve on and how.
+        For the analysis there was a focus on the signup and onboarding flows because these two processes are imperative
+        for a successful user experience.
+    </h3>
+
+    <h2>Prototyping & Usability Testing</h2>
+    <h3>
+        To visualise the final product I sketched possible solutions. I then created wireframes in Figma. Ultimately, I
+        came up with an app that would have multiple ways to register, coaching screens for new users and would work
+        more like an online marketplace for pet or plant care needs.
+    </h3>
+    <h3>User testing was performed after every reiteration. </h3>
+    
+    <div class="centerImage">
+    <img src="images/PorterPaperProto.png" alt="image of paper prototypes" width="800" height="200"
+        padding="20px">
+
+    <img src="images/PorterMidProto.png" alt="image of mid prototype" width="800" height="200" padding="20px">
+
+    <img src="images/PorterHiProto.png" alt="image of Hi-Fi prototype" width="800" height="200" padding="20px">
+</div>
+
+
+    <h2>Conclusion</h2>
+    <h3>I’ve learned a great deal during this case study.
+        It’s important to spend time in the initial interviews to really understand users’ pain points. It would be wise
+        to spend time creating clear objectives and questions. If I had the opportunity to go back, I would have spent
+        more time interviewing more pet and plant parents.
+        It is also crucial to focus on just one problem. When discussing user pain points it's very easy to get caught
+        up in several different problems. When creating a product it's important to not lose sight of your actual goal.
+    </h3>
+
+    <footer>
+        <div class="footer">
+
+            <div class="icons">
+                <a href="www.linkedin.com/in/ivettetorres9" class="LI"><img border="0" alt="LinkedIn Icon"
+                        src="images/linkedinIcon.png" width="50" height="50">
+                </a>
+                <a href="#" class="Em"><img border="0" alt="email icon" src="images/EmailIcon.png" width="50"
+                        height="50">
+                </a>
+            </div>
+
+
+            <div class="homeIcon">
+                <a href="index.html" class="home"><img border="0" alt="Home Icon" src="images/HomeIcon.png" width="50"
+                        height="50">
+                </a>
+            </div>
+
+            <div class="footerText">
+                <p>© 2022 ivette torres, All Rights Reserved</p>
+            </div>
+
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -39,8 +134,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
